infra/k8s/mercure-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mercure
  namespace: maggie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mercure
  template:
    metadata:
      labels:
        app: mercure
    spec:
      containers:
        - name: mercure
          image: dunglas/mercure
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              memory: 32Mi
              cpu: 10m
            limits:
              memory: 128Mi
              cpu: 200m
