infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maggie
  namespace: maggie
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: maggieai.fr
      http:
        paths:
          - path: /agent
            pathType: Prefix
            backend:
              service:
                name: agent
                port:
                  number: 8001
          - path: /ciqual
            pathType: Prefix
            backend:
              service:
                name: ciqual
                port:
                  number: 8002
          - path: /.well-known/mercure
            pathType: Prefix
            backend:
              service:
                name: mercure
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
  tls:
    - hosts:
        - maggieai.fr
